# burst-forge

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  EXPERIMENTS.md  README.md  crate-hashes.json  flake.nix  result
clusters/: scale-test.yaml
configs/: cerebras-matrix.yaml  cerebras-optimal.yaml  gap-gw-sweep-300-2init.yaml  gap-init-latency.yaml  gap-jobs-300.yaml  gap-multi-secret.yaml  gap-workers-3-optimal.yaml  gap-workers-4-optimal.yaml  investigate-gw-cpu.yaml  investigate-wh-contention.yaml  investigate-wh-cpu-12.yaml  investigate-wh-cpu-3.yaml  investigate-wh-limit-sweep.yaml  investigate-wh5-optimal.yaml  observe-gw-memory.yaml  observe-wh-mechanism.yaml  optimized-matrix.yaml  original-matrix.yaml  phase1-gw-memory-sweep-v2.yaml  phase1-gw-memory-sweep.yaml  phase1b-qps-saturation.yaml  phase1c-wh-saturation.yaml  phase1d-1000-pod-baseline.yaml  phase1e-1000-pod-isolated.yaml  phase1f-1500-pod-isolated.yaml  phase1g-2000-pod-isolated.yaml  phase1h-5000-pod-isolated.yaml  phase1i-10000-pod-isolated.yaml  phase1i-10000-prewarmed.yaml  phase1i-10000-single-wave.yaml  phase1i-10000-warm-baseline.yaml  phase2-wh-contention-remap.yaml  phase3-gw-replica-sweep.yaml  phase4-network-analysis.yaml  phase5-node-topology.yaml  phase6-wh-memory-sweep.yaml  phase7-gw-readiness.yaml  phase8-combined-optimal.yaml  single-1000.yaml  sweep-gw-memory-wh12.yaml  (+8 more)
docs/: experiment-cycle.md  session-2026-04-09-probe-optimization.md  session-handoff-2026-04-01.md
examples/: burst-forge.yaml
profiles/: cerebras.yaml
queries/: connection-reuse.sql  (+6 more)
(+26 files in other folders)
